src/pages/Ranks/style.scss
$blue: #1f4689;
.ranks-outer {
  max-height: 500px;
  overflow-y: scroll;
  margin-top: 24px;
}
.ranks {
  max-width: 100%;

  td {
    padding: 16px 32px;
    text-align: center;
  }

  th {
    padding: 8px;
  }

  tr {
    background: white;

    &:nth-child(odd) td {
      color: $blue;
    }
  }
}

